styles.css
@layer reset, base, theme, components, utils;

@layer reset {

	*,
	*::before,
	*::after {
		box-sizing: border-box;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	p {
		margin: 0;
		font-size: inherit;
		font-weight: normal;
	}

	a {
		color: inherit;
		text-decoration: none;
	}

	a:hover {
		text-decoration: underline;
	}

}

@layer theme {
	:root {
		--bg-color: #0B1D26;
		--accent-color: #FBD784;
		--foreground-color: #FFF;
	}
}

@layer base {
	body {
		margin: 0;
		font-size: 1.125rem;
		color: var(--foreground-color);
		background-color: var(--bg-color);

		@media (width <=800px) {
			font-size: 1rem;
		}
	}
}

/*Header*/
@layer components {
	.main-header-top-bar {
		display: grid;
		grid-template-columns: 1fr auto 1fr;
		gap: 1rem;
		align-items: center;
		padding-block: 4rem;

		@media (width <=1280px) {
			grid-template-columns: 1fr auto;
		}

		@media (width <=500px) {
			align-items: flex-start;
		}

		@media (width <=800px) {
			padding-block-start: 2rem;
		}
	}

	.brand-logo {
		font-size: 2rem;
		letter-spacing: 3px;
	}

	.main-header-nav {
		display: flex;
		flex-direction: row;
		gap: 1rem;

		@media (width <=500px) {
			flex-direction: column;
			gap: .5rem;
		}
	}

	.main-header {
		background-image: url('./imgs/header-bg.jpg');
		height: 150vh;
		width: 100%;
		background-size: cover;
		background-position: 25% 25%;
		margin-block-end: -50vh;
	}

	.main-header-content {
		max-width: 1750px;
		margin-inline: auto;
		padding-inline: 2rem;
	}

	.main-header-title-container {
		display: flex;
		flex-direction: column;
		gap: 2rem;
		max-width: 1000px;
		margin-inline: auto;
		margin-block-start: 10vh;

		@media (width <=800px) {
			margin-block-start: 0;
		}
	}

	.main-header-title {
		font-size: 5.5rem;
		text-wrap: balance;
		line-height: 100px;

		@media (width <=1200px) {
			font-size: 4rem;
			line-height: normal;
		}

		@media (width <=800px) {
			font-size: 3.25rem;
		}

		@media (width <=640px) {
			font-size: 2.5rem;
		}
	}

	.scroll-down {
		display: flex;
		gap: 0.5rem;
		align-items: flex-start;
	}

	.scroll-down svg {
		width: 16px;
		animation: bounce 1s infinite alternate;

		@media (prefers-reduced-motion: reduce) {
			animation: none;
		}
	}

	@keyframes bounce {
		100% {
			translate: 0 25%;
		}
	}

	.header-fade-out {
		height: 51vh;
		background: linear-gradient(to bottom, transparent, var(--bg-color) 75%);
		margin-block-end: -25vh;
	}
}

/*Main content*/
@layer components {
	.content-container {
		max-width: 95rem;
		margin-inline: auto;
		padding-inline: 2rem;
		margin-block-end: 6.75rem;
		display: flex;
		gap: 11rem;
		flex-direction: column;
	}

	.main-content {
		display: contents;
	}

	.read-more-link {
		display: flex;
		gap: .5rem;
		align-items: center;
		color: var(--accent-color);

		svg {
			width: 16px;
			rotate: -90deg;
			animation: bounce-horizontal 1s infinite alternate;

			@media (prefers-reduced-motion: reduce) {
				animation: none;
			}
		}
	}

	@keyframes bounce-horizontal {
		100% {
			translate: 25%;
		}
	}

	.section {
		display: flex;
		flex-direction: row;
		align-items: center;
		gap: 8rem;

		@media (width <=800px) {
			flex-direction: column;
			gap: 4rem;
		}
	}

	.section-text-wrapper {
		position: relative;
		/*TODO: delete this property later so that you can see what happens*/
		align-self: stretch;
		display: flex;
		align-items: center;

		&::before {
			content: attr(data-number);
			position: absolute;
			top: 0;
			left: 0;
			font-size: 14rem;
			font-weight: 900;
			opacity: .1;

			@media (width <=1200px) {
				font-size: 8rem;
				line-height: 0;
			}
		}
	}

	.section-text-container {
		display: flex;
		flex-direction: column;
		gap: 1.33rem;
		margin-inline-start: 8rem;

		@media (width <=1200px) {
			margin-inline-start: 0;
		}
	}

	.section-title {
		font-size: 3.5rem;
		text-wrap: balance;

		@media (width <=1100px) {
			font-size: 2.5rem;
		}
	}

	.section-text {
		text-wrap: pretty;
		line-height: 1.75;
	}

	.section-img {
		aspect-ratio: 7 / 9;
		object-fit: cover;
		border-radius: 1rem;
		width: 100%;

		@media (width <=1450px) {
			max-width: 400px;
		}

		@media (width <=1100px) {
			max-width: 300px;
		}

		@media (width <=800px) {
			max-width: 400px;
		}
	}

	@media (width <=800px) {
		.section-reversed-order {
			flex-direction: column-reverse;
		}
	}

}

/*Footer*/
@layer components {
	.footer {
		display: flex;
		flex-direction: row;
		justify-content: space-between;

		@media (width <=1100px) {
			flex-direction: column-reverse;
			gap: 3rem;
		}
	}

	.footer-brand-info {
		display: flex;
		flex-direction: column;
		gap: 1.5rem;
	}

	.footer-subtitle {
		max-width: 17rem;
		text-wrap: pretty;
		flex-grow: 1;
	}

	.copyright {
		opacity: .5;
	}

	.footer-links {
		display: flex;
		gap: 11rem;

		@media (width <=1100px) {
			gap: 3rem;
		}

		@media (width <=640px) {
			display: contents;
		}
	}

	.footer-link-section {
		display: flex;
		flex-direction: column;
		gap: 1.5rem;
	}

	.footer-link-title {
		font-size: 1.5rem;
		color: var(--accent-color);
	}

	.footer-nav {
		display: contents;
	}
}

/*Reusable components*/
@layer components {
	.section-tagline {
		display: flex;
		text-transform: uppercase;
		gap: 1rem;
		align-items: center;
		color: var(--accent-color);
		letter-spacing: .33em;

		&::before {
			content: "";
			display: block;
			width: 4.5rem;
			height: 2px;
			background-color: var(--accent-color);
		}

		@media (width <=425px) {
			&::before {
				display: none;
			}
		}
	}
}

@layer utils {
	.font-serif {
		font-family: "PT Serif", Georgia, 'Times New Roman', Times, serif;
	}

	.font-sans {
		font-family: "Poppins", Arial, Helvetica, sans-serif;
	}
}

